--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="no">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="QGIS Norge Brukergruppe">
+    <meta name="author" content="QGIS Norge">
+
+    <title>QGIS Norge - Brukergruppe</title>
+
+  </head>
+
+  <body>
+
+    <div class="container">
+	
+		<div class="header clearfix">
+		
+			<h3 class="text-muted"></h3>
+			
+		</div>
+
+		<div class="jumbotron">
+	  
+			<h1>QGIS Norge</h1>
+			
+			<p class="lead">Her bygges Websiden til den Norske QGIS Brukergruppen</p>
+			
+		</div>
+
+
+    </div> <!-- /container -->
+
+  </body>
+</html>
+
