test beautiful further

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: QGIS Norge
-subtitle: Webside for den Norske QGIS Brukergruppe
+subtitle: Webside for den Norske QGIS Brukergruppen
 use-site-title: true
 ---
 
